# ldgr-core

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: release.yml
docs/: adapter-installation.md  adapter-telemetry.md  generic-multi-role-loop.md  ldgr-build-core-contract.md  ldgr-loop-philosophy.html  multi-agent-write-story.md
extensions/: ldgr-context.ts
prompts/: ldgr-init-project-setup.md  ldgr-loop-invariants.md  ldgr-loop-planner.md  ldgr-loop-scryb.md  ldgr-loop-validator.md  ldgr-loop-worker.md  loop-prompt.md
schema/: database-contract.json
scripts/: generate-database-contract.py  install.sh
src/: adapter_bundle.rs  adapter_command.rs  adapter_manifest.rs  adapter_profile.rs  adapter_registry.rs  claims.rs  conduct_status.rs  database_contract.rs  generated_database_contract.rs  harness_config.rs  lib.rs  loop_invariants.rs  loop_runtime.rs  main.rs  manifest_integrity.rs  release_index.rs  telemetry.rs  tool_runner.rs  web.rs
src/archive/: web_old.rs
src/cli/: mod.rs
src/cli/args/: adapters.rs  audit.rs  (+6 more)
src/loop_runtime/: mod.rs  process.rs  prompts.rs  runtime.rs  tests.rs  types.rs
src/store/: context.rs  helpers.rs  ingestion.rs  mission_log.rs  mod.rs  prompts.rs  schema.rs  types.rs  validation.rs  work.rs
src/telemetry/: buffer.rs  serializer.rs  transition.rs  transmission.rs
src/web/: artifacts.rs  assets.rs  conduct.rs  http.rs  mod.rs  routes.rs  server.rs  tests.rs
src/web_assets/: app.css  app.js  index.html
tests/: adapter_public_contract.rs  cli_smoke.rs  telemetry_remote.rs
(+31 files in other folders)
