[package]
name = "ldgr-core"
version = "0.1.7"
edition = "2021"
description = "A minimal durable investigation loop backed by SQLite."
license = "Apache-2.0"
authors = ["bakobiibizo <bakobiibizo@gmail.com>"]
repository = "https://github.com/hydra-dynamix/ldgr-core"
homepage = "https://github.com/hydra-dynamix/ldgr-core"
readme = "README.md"
exclude = ["Cargo.lock"]
keywords = ["cli", "sqlite", "agents", "autonomous", "ledger"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "ldgr"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
toml = "0.8"
sha2 = "0.10"
ed25519-dalek = "2.1"
flate2 = "1.0"
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
dialoguer = { version = "0.11", default-features = false }
getrandom = "0.2"
libc = "0.2"
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.12.28", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
semver = "1.0"
tar = "0.4"
thiserror = "1.0"
tempfile = "3.10"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_Security", "Win32_System_JobObjects", "Win32_System_Threading"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
